--- a/Zaklady/Views/Shared/Sidebar.cshtml
+++ b/Zaklady/Views/Shared/Sidebar.cshtml
@@ -5,7 +5,7 @@
 
             <ul id="menu-content">
                 <li>
-                    <a href="@Url.Action("CreateFootballMatch", "FootballMatch")">
+                    <a href="@Url.Action("Index", "Home")">
                         <i class="fa fa-dashboard fa-lg"></i> Strona główna
                     </a>
                 </li>
